# big-code-analysis

./: .bca-baseline.toml  .bcaignore  .checkmake.ini  .gitignore  .gitmodules  .grammar-marker-baseline.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .rumdl.toml  .snapshot-anchor-baseline.txt  .taplo.toml  .taskcluster.yml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md  RELEASING.md  SECURITY.md  STABILITY.md  about.hbs  about.toml  bca-thresholds.toml  bca.toml  check-enums-codegen-drift-test.py  check-enums-codegen-drift.sh  check-grammar-crate.py  check-grammar-marker-sync-test.py  check-grammar-marker-sync.py  check-grammars-crates.sh  check-manpage-assets.py  check-snapshot-anchors.py  check-versions.py  codecov.yml  deny.toml  minisign.pub  (+4 more)
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/rules/: macro-comments.md  testing.md
.config/: nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: book.yml  ci.yml  mutation-test.yml  pages.yml  python-wheels.yml  release.yml  snapshot-anchors.yml
big-code-analysis-book/: book.toml  deploy-to-GitHub-Pages
big-code-analysis-book/src/: README.md  SUMMARY.md  languages.md  metrics.md  migration.md
big-code-analysis-cli/: Cargo.toml  README.md
big-code-analysis-cli/src/: baseline.rs  baseline_diff.rs  baseline_diff_tests.rs  baseline_tests.rs  check_format.rs  commands.rs  commands_tests.rs  diff.rs  diff_tests.rs  dispatch.rs  exemptions.rs  exemptions_tests.rs  format_util.rs  formats.rs  html_report.rs  lib.rs  lib_tests.rs  main.rs  manifest.rs  manifest_tests.rs  markdown_report.rs  metric_catalog.rs  metric_diff.rs  metric_diff_tests.rs  threshold_suggestion.rs  thresholds.rs  thresholds_tests.rs  walk_seed.rs  walk_seed_tests.rs
big-code-analysis-cli/src/markdown_report/: sections.rs  sections_tests.rs
big-code-analysis-cli/src/snapshots/: big_code_analysis_cli__html_report__tests__html_report_two_lang.snap
big-code-analysis-cli/tests/: action_enforcement.rs  check_baseline.rs  check_exclude.rs  check_exit_codes.rs  check_suppression.rs  check_thresholds.rs  cli_smoke.rs  diff_baseline.rs  diff_since.rs  exclude_from.rs  exclude_path_form.rs  exemptions.rs  format_smoke.rs  html_report.rs  init.rs  invalid_glob.rs  list_metrics.rs  manifest.rs  markdown_format.rs  paths_discovery.rs  skip_generated.rs  warning_flag.rs
big-code-analysis-cli/tests/common/: mod.rs  validators.rs
big-code-analysis-py/: Cargo.toml  README.md  build.rs  pyproject.toml  pyrightconfig.json
big-code-analysis-py/examples/: async_patterns.py  batch_processing.py  cli_parity.py  errors_taxonomy.py  flat_records.py  jupyter_quickstart.ipynb  metric_selection.py  pipeline_db.py  quick_start.py  sarif_output.py  sarif_upload.py
big-code-analysis-py/python/big_code_analysis/: __init__.py  _flatten.py  _native.pyi
big-code-analysis-py/src/: analysis.rs  batch.rs  conversion.rs  language.rs  lib.rs  sarif.rs
big-code-analysis-py/tests/: conftest.py  test_batch.py  test_book_examples.py  test_flatten.py  test_metrics_select.py  test_sarif.py  test_smoke.py
big-code-analysis-py/tests/fixtures/: Hello.java  generated.rs  generated_with_tests.rs  hello.cpp  hello.py  hello.rs  install  rust_with_tests.rs
big-code-analysis-web/: Cargo.toml  README.md
big-code-analysis-web/src/: lib.rs
big-code-analysis-web/src/web/: comment.rs  function.rs  metrics.rs  mod.rs  server.rs  server_tests.rs
big-code-analysis-web/tests/: cli_smoke.rs
docs/: file-detection.md
docs/development/: lessons_learned.md  mutation_testing.md  output_name_normalization_design.md
enums/: Cargo.toml
enums/src/: common.rs  languages.rs  macros.rs  main.rs  rust.rs
enums/templates/: c_macros.rs  rust.rs
enums/tests/: dispatch.rs
generate-grammars/: generate-grammar.sh  generate-mozcpp.sh  generate-mozjs.sh
man/: bca-check.1  bca-count.1  bca-diff-baseline.1  bca-diff.1  bca-dump.1  bca-exemptions.1  bca-find.1  bca-functions.1  bca-init.1  bca-list-metrics.1  bca-metrics.1  bca-ops.1  bca-preproc.1  bca-report.1  bca-strip-comments.1  bca-web.1  bca.1
packaging/: README.md
packaging/alpine/: APKBUILD.in
packaging/freebsd/: +MANIFEST.in
packaging/homebrew/: big-code-analysis.rb.tmpl
packaging/scoop/: big-code-analysis.json.in
src/: alterator.rs  ast.rs  c_macro.rs  cfg_predicate.rs  checker.rs  comment_rm.rs  concurrent_files.rs  concurrent_files_tests.rs  count.rs  error.rs  find.rs  function.rs  function_tests.rs  getter.rs  langs.rs  lib.rs  macros.rs  metric_catalog.rs  metric_set.rs  metric_set_tests.rs  node.rs  ops.rs  parser.rs  preproc.rs  spaces.rs  suppression.rs  tools.rs  tools_tests.rs  traits.rs
src/c_langs_macros/: c_macros.rs  c_specials.rs  mod.rs
src/languages/: language_bash.rs  language_ccomment.rs  language_cpp.rs  language_csharp.rs  language_elixir.rs  language_go.rs  language_groovy.rs  language_irules.rs  language_java.rs  mod.rs  (+13 more)
tests/: README.md  ast_seam_test.rs  book_ast_traversal_examples.rs  checkstyle_test.rs  cognitive_cross_language_parity.rs  csharp_test.rs  csv_test.rs  cyclomatic_cross_language_parity.rs  deepspeech_test.rs  exit_cross_language_parity.rs  html_test.rs  irules_test.rs  nargs_cross_language_parity.rs  pdf_js_test.rs  php_test.rs  sarif_test.rs  serde_test.rs  suppression_test.rs
tree-sitter-ccomment/: .gitignore  Cargo.toml  package.json
tree-sitter-ccomment/bindings/rust/: README.md
tree-sitter-ccomment/src/: parser.c
tree-sitter-mozcpp/: Cargo.toml  LICENSE  package.json
tree-sitter-mozcpp/bindings/rust/: README.md  build.rs
tree-sitter-mozjs/: Cargo.toml  package.json
tree-sitter-mozjs/bindings/rust/: README.md
tree-sitter-mozjs/src/: grammar.json  node-types.json  parser.c
tree-sitter-preproc/: Cargo.toml  package.json
tree-sitter-tcl/: Cargo.toml  LICENSE
tree-sitter-tcl/bindings/rust/: README.md
utils/: bca-self-scan-headroom.py  check-tools.sh  deploy-book-to-gh-pages.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+509 files in other folders)
