[workspace]
resolver = "3"
members = ["big-code-analysis-cli", "big-code-analysis-web", "xtask"]
# `xtask` is intentionally excluded from `default-members`: it's a
# build-time helper that renders man pages from the live clap
# definitions (see `xtask/src/main.rs` and `man/`). It builds cleanly
# under `cargo build --workspace`, but a bare `cargo build` at the repo
# root should not pull in a binary that has no shipping counterpart.
default-members = [".", "big-code-analysis-cli", "big-code-analysis-web"]
exclude = [
  "enums",
  "tree-sitter-ccomment",
  "tree-sitter-mozcpp",
  "tree-sitter-mozjs",
  "tree-sitter-preproc",
  "tree-sitter-tcl",
]

[workspace.package]
version = "0.0.25"
edition = "2024"
rust-version = "1.94"
license = "MPL-2.0"
repository = "https://github.com/dekobon/big-code-analysis"
authors = [
  "Calixte Denizet <cdenizet@mozilla.com>",
  "Elijah Zupancic <elijah@zupancic.name>",
]

# Pins below mirror enums/Cargo.toml. The `enums` crate is excluded from
# this workspace (see [workspace].exclude above) and cannot inherit these
# entries via `.workspace = true`, so any grammar bump here MUST be
# applied to enums/Cargo.toml in lockstep (see recreate-grammars.sh).
[workspace.dependencies]
tree-sitter = "=0.26.8"
tree-sitter-bash = "=0.25.1"
tree-sitter-c-sharp = "=0.23.5"
tree-sitter-go = "=0.25.0"
tree-sitter-java = "=0.23.5"
tree-sitter-javascript = "=0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-lua = "=0.5.0"
tree-sitter-perl = "=1.1.2"
tree-sitter-php = "=0.24.2"
tree-sitter-python = "=0.25.0"
tree-sitter-rust = "=0.24.2"
tree-sitter-typescript = "=0.23.2"
tree-sitter-ccomment = { path = "./tree-sitter-ccomment", version = "=0.20.3" }
tree-sitter-mozcpp = { path = "./tree-sitter-mozcpp", version = "=0.20.4" }
tree-sitter-mozjs = { path = "./tree-sitter-mozjs", version = "=0.20.3" }
tree-sitter-preproc = { path = "./tree-sitter-preproc", version = "=0.20.3" }
tree-sitter-tcl = { path = "./tree-sitter-tcl", version = "=1.1.0" }

# Workspace-wide lint posture. The allow set is intentionally minimal
# (host-identity baseline) — additional allows go at file or function
# level so the carve-out stays visible at the affected site rather
# than weakening the whole workspace.
[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[package]
name = "big-code-analysis"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/big-code-analysis/"
readme = "README.md"
keywords = ["metrics"]
description = "Tool to compute and export code metrics"

[dependencies]
aho-corasick = "^1.0"
crossbeam = { version = "^0.8", features = ["crossbeam-channel"] }
csv = "=1.4.0"
globset = "^0.4"
num = "^0.4"
num-derive = "^0.4"
num-format = "^0.4"
num-traits = "^0.2"
petgraph = "^0.8"
regex = "^1.7"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
termcolor = "^1.2"
walkdir = "^2.3"

tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-perl.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-ccomment.workspace = true
tree-sitter-mozcpp.workspace = true
tree-sitter-mozjs.workspace = true
tree-sitter-preproc.workspace = true
tree-sitter-tcl.workspace = true

[lints]
workspace = true

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json", "redactions"] }
jsonschema = "^0.46"
tempfile = "^3.0"
pretty_assertions = "^1.3"
quick-xml = "^0.39"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
opt-level = 3
debug = "line-tables-only"
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
