[package]
name = "big-code-analysis-cli"
version = "0.0.25"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
repository = "https://github.com/dekobon/big-code-analysis/blob/main/big-code-analysis-cli/"
edition = "2024"
keywords = ["metrics"]
description = "Tool to compute and export code metrics"
license = "MPL-2.0"

[[bin]]
name = "big-code-analysis-cli"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
globset = "^0.4"
ignore = "^0.4"
big-code-analysis = { path = "..", version = "=0.0.25" }
serde = { version = "^1.0", features = ["derive"] }
serde_cbor = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.9"
toml = "^1.1"

[dev-dependencies]
assert_cmd = "^2.0"
csv = "=1.4.0"
jsonschema = "^0.46"
predicates = "^3.0"
quick-xml = "^0.39"
tempfile = "^3.0"
