[package]
name = "big-code-analysis-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/dekobon/big-code-analysis/blob/main/big-code-analysis-cli/"
keywords = ["metrics"]
description = "Tool to compute and export code metrics"

[[bin]]
name = "bca"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
globset = "^0.4"
ignore = "^0.4"
big-code-analysis = { path = "..", version = "=0.0.25" }
serde = { version = "^1.0", features = ["derive"] }
serde_cbor = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.9"
toml = "^1.1"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "^2.0"
csv = "=1.4.0"
insta = "1.29.0"
jsonschema = "^0.46"
predicates = "^3.0"
quick-xml = "^0.39"
tempfile = "^3.0"
