[package]
name = "big-code-analysis-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Python bindings for big-code-analysis"
publish = false

[lib]
# `cdylib` is the artefact `maturin` ships inside the wheel — CPython
# loads it at runtime. `rlib` lets `cargo test --workspace` link the
# crate into the test harness so the Rust-side
# `serde_json::Value` → `PyAny` converter can be exercised without a
# round-trip through `maturin develop`.
name = "big_code_analysis_py"
crate-type = ["cdylib", "rlib"]

[features]
# PyO3's `extension-module` (skip libpython link) and
# `auto-initialize` (boot the interpreter on first GIL acquire) are
# mutually exclusive: the wheel-build path needs the first, the
# `cargo test` path needs the second.
#
# Both are wired through *this crate's* `default` feature so a
# single, idiomatic `--no-default-features` flip is enough to swap
# build modes — `[tool.maturin].no-default-features = true` plus
# `features = ["pyo3/extension-module"]` in pyproject.toml.
#
# We deliberately do NOT expose `extension-module` as a feature of
# *this* crate. If we did, `cargo test --workspace --all-features`
# would activate both simultaneously and the libpython link would
# break — see lesson (added in this PR) on PyO3 feature shape vs
# `--all-features`.
default = ["pyo3/auto-initialize"]

[dependencies]
big-code-analysis = { path = "..", default-features = true }
pyo3 = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# `serde` (derive) is used only by the conversion-layer key-order
# test, which derives `Serialize` on a local struct to exercise
# the real `to_string` → `json.loads` boundary without depending
# on `FuncSpace`'s declaration order. Inherits version + features
# from `[workspace.dependencies]`.
serde.workspace = true
# `tempfile` backs the `analyze_path` integration tests that need a
# real on-disk file (shebang detection, unknown-extension probe).
# Matches the root crate's dev-dep pin in the workspace `Cargo.toml`.
tempfile = "^3.0"

[build-dependencies]
# `add_libpython_rpath_link_args` in `build.rs` bakes the libpython
# rpath into binaries that embed Python (i.e. `cargo test`), so the
# harness finds `libpython3.12.so` without an `LD_LIBRARY_PATH`
# crutch. Exact-pinned to the same patch as the runtime `pyo3` dep
# (`=0.28.3` in the root workspace) because `"0.28"` is a caret
# range (`^0.28.0`) that lets `pyo3-build-config` drift onto a
# different patch than `pyo3` — and the rpath link-args contract
# is part of `pyo3`'s build-time API.
pyo3-build-config = "=0.28.3"

[lints]
workspace = true
